--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,21 +1,43 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <div>
-    <label>Email</label>
-    <input formControlName="email" type="email" />
-    <div *ngIf="submitted && f['email'].errors">
-      <small *ngIf="f['email'].errors['required']">Email is required</small>
-      <small *ngIf="f['email'].errors['email']">Email must be valid</small>
-    </div>
-  </div>
+<div class="login-container">
+  <div class="login-card">
+    <h1 class="title">Culinary Canvas</h1>
+    <p class="subtitle">Welcome back! Please login to your account.</p>
 
-  <div>
-    <label>Password</label>
-    <input formControlName="password" type="password" />
-    <div *ngIf="submitted && f['password'].errors">
-      <small *ngIf="f['password'].errors['required']">Password is required</small>
-      <small *ngIf="f['password'].errors['minlength']">Password must be at least 6 characters</small>
-    </div>
-  </div>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="form-group flex column">
+        <input
+          type="email"
+          placeholder="Email address"
+          formControlName="email"
+        />
+        <div class="error" *ngIf="submitted && f['email'].errors">
+          <small *ngIf="f['email'].errors['required']">Email is required</small>
+          <small *ngIf="f['email'].errors['email']">Email must be valid</small>
+        </div>
+      </div>
 
-  <button type="submit">Login</button>
-</form>
+      <div class="form-group">
+        <input
+          type="password"
+          placeholder="Password"
+          formControlName="password"
+        />
+        <div class="error" *ngIf="submitted && f['password'].errors">
+          <small *ngIf="f['password'].errors['required']">
+            Password is required
+          </small>
+          <small *ngIf="f['password'].errors['minlength']">
+            Password must be at least 6 characters
+          </small>
+        </div>
+      </div>
+
+      <a routerLink="/registration" class="registration">
+        Registration
+      </a>
+      
+
+      <button type="submit" class="login-btn">Login</button>
+    </form>
+  </div>
+</div>
