--- a/src/app/components/auth/registrate/registrate.component.html
+++ b/src/app/components/auth/registrate/registrate.component.html
@@ -1,37 +1,74 @@
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-  <div>
-    <label>Name</label>
-    <input formControlName="name" type="text" />
-    <div *ngIf="submitted && f['name'].errors">
-      <small *ngIf="f['name'].errors['required']">Name is required</small>
-    </div>
-  </div>
+<div class="register-container">
+  <div class="register-card">
+    <h2 class="title">Create Account</h2>
+    <p class="subtitle">Join us and start sharing your recipes!</p>
 
-  <div>
-    <label>Email</label>
-    <input formControlName="email" type="email" />
-    <div *ngIf="submitted && f['email'].errors">
-      <small *ngIf="f['email'].errors['required']">Email is required</small>
-      <small *ngIf="f['email'].errors['email']">Email must be valid</small>
-    </div>
-  </div>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label>Name</label>
+        <input
+          formControlName="name"
+          type="text"
+          placeholder="Your full name"
+        />
+        <div class="error" *ngIf="submitted && f['name'].errors">
+          <small *ngIf="f['name'].errors['required']">Name is required</small>
+        </div>
+      </div>
 
-  <div>
-    <label>Password</label>
-    <input formControlName="password" type="password" />
-    <div *ngIf="submitted && f['password'].errors">
-      <small *ngIf="f['password'].errors['required']">Password is required</small>
-      <small *ngIf="f['password'].errors['minlength']">Password must be at least 6 characters</small>
-    </div>
-  </div>
+      <div class="form-group">
+        <label>Email</label>
+        <input
+          formControlName="email"
+          type="email"
+          placeholder="example@email.com"
+        />
+        <div class="error" *ngIf="submitted && f['email'].errors">
+          <small *ngIf="f['email'].errors['required']">Email is required</small>
+          <small *ngIf="f['email'].errors['email']">Email must be valid</small>
+        </div>
+      </div>
 
-  <div>
-    <label>Confirm Password</label>
-    <input formControlName="confirmPassword" type="password" />
-    <div *ngIf="submitted && registerForm.errors?.['mismatch']">
-      <small>Passwords do not match</small>
-    </div>
-  </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input
+          formControlName="password"
+          type="password"
+          placeholder="Minimum 6 characters"
+        />
+        <div class="error" *ngIf="submitted && f['password'].errors">
+          <small *ngIf="f['password'].errors['required']"
+            >Password is required</small
+          >
+          <small *ngIf="f['password'].errors['minlength']">
+            Password must be at least 6 characters
+          </small>
+          <small *ngIf="f['password'].errors['noUppercase']">
+            Password must contain at least one uppercase letter
+          </small>
+        </div>
+      </div>
 
-  <button type="submit">Register</button>
-</form>
+      <div class="form-group">
+        <label>Confirm Password</label>
+        <input
+          formControlName="confirmPassword"
+          type="password"
+          placeholder="Repeat your password"
+        />
+        <div
+          class="error"
+          *ngIf="submitted && registerForm.errors?.['mismatch']"
+        >
+          <small>Passwords do not match</small>
+        </div>
+      </div>
+      <a routerLink="/login" class="login"> Login If Already Have Account </a>
+
+      <button type="submit" class="register-btn">Register</button>
+
+      <div class="success" *ngIf="success">{{ success }}</div>
+      <div class="error-msg" *ngIf="error">{{ error }}</div>
+    </form>
+  </div>
+</div>
