--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,10 @@
-<p>not-found works!</p>
+<div class="not-found-container">
+  <div class="not-found-card">
+    <h1 class="error-code">404</h1>
+    <h2 class="error-message">Oops! Page not found</h2>
+    <p class="error-subtext">
+      The page you're looking for doesn't exist or has been moved.
+    </p>
+    <a routerLink="/" class="home-btn">Go Back Home</a>
+  </div>
+</div>
